# src/modules/products/infra/http/routes/product.routes.ts
@@ -16,11 +16,9 @@ productRouter.get(
         #swagger.summary = 'Listagem de produtos'
         #swagger.description = 'Apresenta uma lista dos produtos disponíveis.'
 
-        #swagger.parameters[''] = {
-            name: "token",
-            in: 'header',
-            schema: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
-        }
+        #swagger.security = [{
+            "bearerAuth": []
+        }]
 
 
         #swagger.parameters['categoryId'] = {
